rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pg_generate_subscripts_3.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT generate_subscripts(r.a, 2) FROM (SELECT ARRAY[1,2,3] as a UNION ALL SELECT ARRAY[3,4,5]) as r;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------------------+
| pg_catalog.generate_subscripts(r.a,Int64(2)) |
+----------------------------------------------+
| 1                                            |
| 3                                            |
| 5                                            |
| 1                                            |
| 3                                            |
| 5                                            |
+----------------------------------------------+
