rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__unnest_i64_scalar.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT unnest(ARRAY[1,2,3,4,5]);\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+--------------------------------------+
| pg_catalog.unnest(List([1,2,3,4,5])) |
+--------------------------------------+
| 1                                    |
| 2                                    |
| 3                                    |
| 4                                    |
| 5                                    |
+--------------------------------------+
