rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__unnest_str_from_table.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT unnest(r.a) FROM (SELECT ARRAY['1', '2'] as a UNION ALL SELECT ARRAY['3', '4'] as a) as r;\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+------------------------+
| pg_catalog.unnest(r.a) |
+------------------------+
| 1                      |
| 2                      |
| 3                      |
| 4                      |
+------------------------+
